--- a/retoure-web-aktivshop/src/main/webapp/resources/aktivshop/html-header.xhtml
+++ b/retoure-web-aktivshop/src/main/webapp/resources/aktivshop/html-header.xhtml
@@ -5,10 +5,8 @@
       xmlns:h="http://java.sun.com/jsf/html" xmlns:o="http://omnifaces.org/ui">
 
 <ui:component>
-
     <cc:interface>
     </cc:interface>
-
     <cc:implementation>
         <title>aktivshop – Online Versand für Gesundheit, Fitness und Wellness</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -16,26 +14,7 @@
         <meta name="robots" content="INDEX,FOLLOW"/>
         <link rel="icon" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/favicon.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/favicon.ico" type="image/x-icon"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/styles.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/base/default/css/widgets.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/relatedproducts/css/styles.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/manufacturers/manufacturers.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/manufacturers/carousel.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/j2t_autoadd.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/downloads.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/mageworx/modalbox.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/socialbooster/styles.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/lytebox.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/stock_indicator.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/easynavigation.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/catalogsale.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/webandpeople/advancedslider/standart.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/custommenu.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/skin.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/textzoom.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/base/default/css/factfinder.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/vertnav.css" media="all"/>
-        <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/base/default/css/print.css" media="print"/>
+        <h:outputStylesheet library="aktivshop/css" name="aktivshop.css"/>
         <h:outputStylesheet library="retoure/css" name="retourenportal.css"/>
         <link href="http://www.aktivshop.de/rss/default/@new" title="Neue Artikel" rel="alternate" type="application/rss+xml"/>
         <link rel="canonical" href="http://www.aktivshop.de/"/>
@@ -60,7 +39,5 @@
             <link rel="stylesheet" type="text/css" href="http://www.aktivshop.de/skin/frontend/aktivshop/default/css/styles-ie9.css" media="all" />
         </o:conditionalComment>
     </cc:implementation>
-
 </ui:component>
-
 </html>
