--- a/retoure-web-aktivshop/src/main/webapp/resources/retoure/select-return-reason.xhtml
+++ b/retoure-web-aktivshop/src/main/webapp/resources/retoure/select-return-reason.xhtml
@@ -4,17 +4,15 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:cc="http://java.sun.com/jsf/composite">
-
+      xmlns:cc="http://java.sun.com/jsf/composite"
+      xmlns:c="http://java.sun.com/jstl/core"
+      xmlns:t="http://myfaces.apache.org/tomahawk">
 <ui:component>
-
     <cc:interface>
         <cc:attribute name="readonly" type="java.lang.Boolean" required="false" default="false"/>
         <cc:facet name="bottomButtons" required="false"/>
     </cc:interface>
-
     <cc:implementation>
-
         <h:dataTable id="returnTable"
                      rendered="#{not empty retoure.articlesMarkedForReturn}"
                      styleClass="return-table"
@@ -23,14 +21,12 @@
                      cellpadding="0" cellspacing="0"
                      value="#{retoure.articlesMarkedForReturn}" var="article"
                      offset="0" rows="25">
-
             <h:column headerClass="return-column-header">
                 <f:facet name="header">
                     Artikelnummer
                 </f:facet>
                 <h:outputText styleClass="return-content" value="#{article.articleIdent}"/>
             </h:column>
-
             <h:column headerClass="return-column-header return-description-header">
                 <f:facet name="header">
                     Bezeichnung
@@ -38,22 +34,55 @@
                 <h:outputText styleClass="article-content" value="#{article.description1}"/>
                 <br/>
                 <h:panelGroup rendered="#{cc.attrs.readonly}">
-                    <h:outputText rendered="#{article.articleReturn.returnReason.size() > 0}" value="R&uuml;cksendegrund: "/>#{article.articleReturn.returnReasonsAsString}
+                    <h:outputText rendered="#{article.articleReturn.returnReason.size() > 0}"
+                                  value="R&uuml;cksendegrund: #{article.articleReturn.returnReasonsAsString}"/>
                 </h:panelGroup>
                 <h:panelGroup rendered="#{not cc.attrs.readonly}">
-                    <h:panelGrid columns="1">
-                        <f:param name="articleIdent" value="#{article.articleIdent}"/>
-                        <ui:repeat value="#{retoure.getReturnReasonForArticle(article)}" var="reason">
-                            <h:selectOneRadio>
-                                <f:selectItem itemLabel="#{reason.reason}" itemValue="#{reason.id}"/>
-                                <f:param name="articleIdent" value="#{article.articleIdent}"/>
-                                <f:ajax event="click" listener="#{retoure.reasonSelected}"/>
-                            </h:selectOneRadio>
-                        </ui:repeat>
+                    <h:panelGrid id="grid1" columns="1">
+                        <!--
+                            stage1
+                        -->
+                        <t:selectOneRadio id="stage1Radio" layout="spread"
+                                          value="#{retoure.stage1Selected[article.articleIdent]}">
+                            <f:selectItems value="#{retoure.stage1Values}"
+                                           var="i"
+                                           itemDisabled="#{i.disabled}" itemValue="#{i.value}" itemLabel="#{i.label}"/>
+                            <f:ajax event="change" render="@form" listener="#{retoure.stage1ChangeListener}"/>
+                        </t:selectOneRadio>
+                        <!--
+                            stage2
+                        -->
+                        <c:forEach items="${retoure.stage1Values}" var="i" varStatus="s">
+                            <t:radio for="stage1Radio" index="#{s.index}"/>
+                            <t:selectManyCheckbox id="stage2Checkbox${s.index}" layout="spread"
+                                                  valueChangeListener="#{retoure.stage2ValueChangeListener}">
+                                <f:selectItems value="#{retoure.stage2Values[s.index]}"
+                                               var="j"
+                                               itemDisabled="#{j.disabled}" itemValue="#{j.value}" itemLabel="#{j.label}"/>
+                            </t:selectManyCheckbox>
+                            <h:panelGrid style="margin-left: 25px;">
+                                <c:forEach items="${retoure.stage2Values[s.index]}" var="j" varStatus="t">
+                                    <t:checkbox rendered="#{retoure.stage2Render[article.articleIdent][s.index]}"
+                                                id="stage2Checkbox${s.index}${t.index}"
+                                                for="stage2Checkbox#{s.index}" index="#{t.index}"/>
+                                </c:forEach>
+                                <h:outputText rendered="#{retoure.stage2Render[article.articleIdent][s.index]}"
+                                              value="Detaillierte Beschreibung:">
+                                    <br/>
+                                </h:outputText>
+                                <h:inputTextarea id="textarea#{s.index}"
+                                                 rendered="#{retoure.stage2Render[article.articleIdent][s.index]}"
+                                                 required="#{retoure.textareaMandatory[article.articleIdent]}"
+                                                 value="#{retoure.message[article.articleIdent]}" valueChangeListener="#{retoure.textareaValueChangeListener}"
+                                                 rows="5" cols="40"
+                                                 title="Weitere Anmerkungen:">
+                                    <f:ajax listener="#{retoure.textareaAjaxListener}"/>
+                                </h:inputTextarea>
+                            </h:panelGrid>
+                        </c:forEach>
                     </h:panelGrid>
                 </h:panelGroup>
             </h:column>
-
             <h:column headerClass="return-column-header">
                 <f:facet name="header">
                     Wieviele zur&uuml;cksenden?
@@ -64,15 +93,10 @@
                     </h:outputText>
                 </h:panelGroup>
             </h:column>
-
             <f:facet name="footer">
                 <cc:renderFacet name="bottomButtons"/>
             </f:facet>
-
         </h:dataTable>
-
     </cc:implementation>
-
 </ui:component>
-
 </html>
